--- a/src/projects.json
+++ b/src/projects.json
@@ -4,7 +4,7 @@
     "imageSrc": "./assets/barereader.png",
     "liveUrl": "https://github.com/BareTools/BareReader/releases",
     "githubUrl": "https://github.com/BareTools/BareReader",
-    "category": "Web"
+    "category": "Desktop"
   },
   {
     "title": "ElectroFer",
